[tool.poetry]
name = "pytorchscikitlearn"
version = "0.1.0"
description = "Pytorch Scikit Learning"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
scikit-learn = "^1.1.2"
pandas = "^1.4.3"
numpy = "^1.23.1"
matplotlib = "^3.5.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.6.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

